--- a/android/app/src/main/res/drawable/background_splash.xml
+++ b/android/app/src/main/res/drawable/background_splash.xml
@@ -3,8 +3,16 @@
     <item android:drawable="@color/primary"/>
     <item
     android:width="150dp"
-    android:height="150dp"
+    android:height="187.5dp"
     android:drawable="@drawable/icon"
     android:gravity="center"
+    />
+    <item
+    android:width="313dp"
+    android:height="15dp"
+    android:drawable="@drawable/text"
+    android:orientation="vertical"
+    android:gravity="center_horizontal|bottom"
+    android:bottom="70dp"
     />
 </layer-list>
