--- a/android/app/src/main/res/values/styles.xml
+++ b/android/app/src/main/res/values/styles.xml
@@ -5,8 +5,8 @@
         <!-- Customize your theme here. -->
         <item name="android:textColor">#000000</item>
         <item name="android:windowBackground">@drawable/background_splash</item>
-        <item name="android:statusBarColor">
+        <!-- <item name="android:statusBarColor">
             @color/primary
-        </item>
+        </item> -->
     </style>
 </resources>
