--- a/ios/isusapp/Base.lproj/LaunchScreen.xib
+++ b/ios/isusapp/Base.lproj/LaunchScreen.xib
@@ -3,7 +3,7 @@
     <device id="retina4_7" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="16086"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="16087"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
@@ -13,16 +13,30 @@
             <rect key="frame" x="0.0" y="0.0" width="375" height="647"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="text" translatesAutoresizingMaskIntoConstraints="NO" id="XmK-y9-WJx">
-                    <rect key="frame" x="49" y="595" width="277" height="22"/>
-                    <autoresizingMask key="autoresizingMask" flexibleMinX="YES" widthSizable="YES" flexibleMaxX="YES" flexibleMinY="YES" heightSizable="YES"/>
+                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="logo_splash" translatesAutoresizingMaskIntoConstraints="NO" id="0s2-Xc-2F9">
+                    <rect key="frame" x="103" y="252" width="169" height="143"/>
+                    <constraints>
+                        <constraint firstAttribute="width" constant="168" id="Yeu-ym-4th"/>
+                        <constraint firstAttribute="height" constant="143" id="wJ1-80-afC"/>
+                    </constraints>
                 </imageView>
-                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="logo_splash" translatesAutoresizingMaskIntoConstraints="NO" id="0s2-Xc-2F9">
-                    <rect key="frame" x="103" y="252" width="168" height="143"/>
-                    <autoresizingMask key="autoresizingMask" flexibleMinX="YES" widthSizable="YES" flexibleMaxX="YES" flexibleMinY="YES" heightSizable="YES" flexibleMaxY="YES"/>
+                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="text" translatesAutoresizingMaskIntoConstraints="NO" id="RFI-E0-2PL">
+                    <rect key="frame" x="67" y="519" width="240" height="128"/>
+                    <constraints>
+                        <constraint firstAttribute="width" constant="240" id="Uta-kT-syZ"/>
+                        <constraint firstAttribute="height" constant="128" id="ejH-WB-tHf"/>
+                    </constraints>
                 </imageView>
             </subviews>
             <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+            <constraints>
+                <constraint firstAttribute="bottom" secondItem="RFI-E0-2PL" secondAttribute="bottom" id="2k5-7E-f1o"/>
+                <constraint firstItem="0s2-Xc-2F9" firstAttribute="centerX" secondItem="iN0-l3-epB" secondAttribute="centerX" id="3KT-4j-5fb"/>
+                <constraint firstItem="0s2-Xc-2F9" firstAttribute="centerY" secondItem="iN0-l3-epB" secondAttribute="centerY" id="U3h-rg-mLo"/>
+                <constraint firstAttribute="trailing" secondItem="RFI-E0-2PL" secondAttribute="trailing" constant="68" id="ZEF-8s-724"/>
+                <constraint firstItem="RFI-E0-2PL" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" constant="67" id="d0V-Ub-B98"/>
+                <constraint firstItem="RFI-E0-2PL" firstAttribute="top" secondItem="0s2-Xc-2F9" secondAttribute="bottom" constant="124" id="rto-cz-2A9"/>
+            </constraints>
             <nil key="simulatedStatusBarMetrics"/>
             <modalPageSheetSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
             <point key="canvasLocation" x="548" y="454.72263868065971"/>
@@ -30,6 +44,6 @@
     </objects>
     <resources>
         <image name="logo_splash" width="1000" height="1250"/>
-        <image name="text" width="626" height="30"/>
+        <image name="text" width="368" height="53"/>
     </resources>
 </document>
